--- a/FirstOne.html
+++ b/FirstOne.html
@@ -5,7 +5,7 @@
 	<title>First page</title>
 	
 </head>
-
+	<link rel="stylesheet" type="text/css" href="fontsquirrel.css">
 	<body>
 			<header>
 				
