--- a/FirstOne.html
+++ b/FirstOne.html
@@ -5,7 +5,7 @@
 	<title>First page</title>
 	
 </head>
-	<link rel="stylesheet" type="text/css" href="fontsquirrel.css">
+
 	<body>
 			<header>
 				
@@ -18,17 +18,16 @@
 			</header>
 
 
-
 			<section id="Objective">
 				<h2>Objective</h2>
-				<p>Help a company and its clients protect its information in an internship or related ITM cyber security role, coding development, based on experience, education, and professional interest.</p>
+				<p class="relexample">Help a company and its clients protect its information in an internship</p>
+				<p>  or related ITM cyber security role, coding development, based on experience, education, and professional interest.</p>
 			</section>
-
+			
 
 			<section id="Education">
 			<h2>Skills</h2>
-			<p>School of Applied Technology Information Technology & Management (ITM) Major Class of 2020
-			</p>
+			<p class="relexample">School of Applied Technology Information Technology & Management</p><p>(ITM) Major Class of 2020</p>
 			</section>
 
 			<section id="Skills">
@@ -50,8 +49,8 @@
 
 			<section id="Acknowledgments">
 				<h2>Awards & Acknowledgments</h2>
-				<p>Auntie Anne’s Leadership and Entrepreneurship Forum ~ 2015</p>
-				<p>The First Tee of Aurora Leon McNair Scholarship ~ 2014</p>
+				<p class="relexample">Auntie Anne’s Leadership and Entrepreneurship Forum ~ 2015</p>
+				<p class="relexample">The First Tee of Aurora Leon McNair Scholarship ~ 2014</p>
 			</section>
 
 			<section id="Activities">
@@ -68,7 +67,7 @@
 
 
 			<footer>
-				<p>Created by Jessica L. Soto</p>
+				<p class="sample">Created by Jessica L. Soto</p>
 				<address>
 				<p><a href="mailto:jsoto9@hawk.iit.edu">jsoto9@hawk.iit.edu</a></p>
 				</address>
