--- a/CATS.html
+++ b/CATS.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cats Cats Cats</title>
+	<link type="text/css" rel="stylesheet" href="ForAllTheCodes.css"> 
+
 </head>
 
- 	<body>
+ 	<body class="cats">
 
  	
 
@@ -15,19 +17,21 @@
  					<h1>I LOVE CATS</h1>
  		</header>
 
-	
+ 			<section id="first">
+			 <img src="f324393248392cea96a2264c0f062b22.jpg" height="200" width="150" alt="Star Wars" class="picleft">
+			 <img src="worlds-most-beautiful-cats-52-57fc9cb29d61b__700.jpg" height="200" width="150" alt="The one with ears" class="picright">
+ 			 <img src="358c57c204a2fec21fa50b917a0728aa.jpg" height="200" width="150" alt="Rainbow on face" class="picbottom">
+ 			</section>
+				
 
 
-			 <img src="f324393248392cea96a2264c0f062b22.jpg" height="200" alt="W3C web site" class="picleft">
-			 <img src="worlds-most-beautiful-cats-52-57fc9cb29d61b__700.jpg" height="200" alt="W3C web site" class="picright">
- 			 <img src="358c57c204a2fec21fa50b917a0728aa.jpg" height="200" alt="W3C web site" class="picleft">
- 		
-		
- 			 <img src="5977cc1ff2e1c6ebfc5a5e3014f62efb.jpg" height="200" alt="W3C web site" class="picleft">
- 			 <img src="150324154019-09-internet-cats-restricted-super-169.jpg" height="200" alt="W3C web site" class="picright">
- 			 <img src="cat-banana.png" height="200" alt="W3C web site" class="picleft">
- 		
+			<section id="second">
+ 			 <img src="5977cc1ff2e1c6ebfc5a5e3014f62efb.jpg" height="200" width="150" alt="Eye color" class="picleft">
+ 			 <img src="150324154019-09-internet-cats-restricted-super-169.jpg" height="200" width="200" alt="Eyebrow" class="picright">
+ 			 <img src="cat-banana.png" height="200" width="200" alt="banana" class="picbottom">
+ 			</section>
  
+
 			<footer>
 				<p>Created by Jessica L. Soto</p>
 				<address>
@@ -38,3 +42,12 @@
 
 	</body>
 </html>
+
+
+
+
+
+
+
+
+
