--- a/Travel.html
+++ b/Travel.html
@@ -11,6 +11,12 @@
 	
 		<header>
 				<h2>Where I Want To Travel</h2>
+				<ul>
+  <li><a class="active" href="index.html">Cats</a></li>
+  <li><a href="Travel.html">Travel</a></li>
+  <li><a href="FirstOne.html">Resume</a></li>
+ 
+</ul>
 		</header>	
 
 	
