--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
  		<header>
 
  					<h1>I LOVE CATS</h1>
+ 					<ul>
+  <li><a class="active" href="index.html">Cats</a></li>
+  <li><a href="Travel.html">Travel</a></li>
+  <li><a href="FirstOne.html">Resume</a></li>
+ 
+</ul>
  		</header>
 
  			
@@ -42,12 +48,4 @@
 
 	</body>
 </html>
-
-
-
-
-
-
-
-
 
